--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-validator": "^6.6.0",
     "helmet": "^4.0.0",
     "hpp": "^0.2.3",
+    "jest": "^26.4.2",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
